Fixed DrawDoc issue where toolbar and layers window would cause bottom bar to overflow, when the previous should keep their height and create a scroll bar

--- a/src/Apps/DrawDoc/style.css
+++ b/src/Apps/DrawDoc/style.css
@@ -27,10 +27,12 @@ button>label {
 
 #drawDocToolBar {
   display: flex;
+  position:absolute;
+  overflow-y:scroll;
   color: inherit;
   flex-direction: column;
   height: 100%;
-  width: 30px;
+  width: 35px;
   border-right: 1px var(--GeneralBorderColor) solid;
 }
 
@@ -44,6 +46,7 @@ canvas-container {
   width: 100%;
   height: 100%;
   overflow: auto;
+  margin-left:35px;
 }
 
 .drawDocCheckersBackground {
@@ -79,8 +82,6 @@ canvas-container {
 
 #drawDocContentBar {
   display: flex;
-  right: 0px;
-  left: 0px;
   height: 100%;
   background: var(--AppBkgrColor);
   border: 1px var(--GeneralBorderColor) solid;
@@ -118,11 +119,13 @@ canvas-container {
 
 #drawDocContentBar>div {
   height: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
+  display:flex;
+  flex-direction: column;
 }
 
 #drawDocLayersWindow {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
   display: flex;
@@ -160,6 +163,7 @@ canvas-container {
   margin-bottom: 2px;
   padding-left:2px;
   padding-right: 2px;
+  height:60px;
 }
 
 #drawDocLayersWindowHeaderMixes {
